--- a/abt.html
+++ b/abt.html
@@ -63,7 +63,7 @@
 	</header>
 	<nav>
 		<ul>
-			<li><a href="hist.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="#">About Us</a></li>
 			<li><a href="reg.html">Registration</a></li>
 		</ul>
